RESOLVED FIXED74454
Arguments object doesn't handle mutation of length property correctly
https://bugs.webkit.org/show_bug.cgi?id=74454
Summary Arguments object doesn't handle mutation of length property correctly
Oliver Hunt
Reported 2011-12-13 15:10:52 PST
Arguments object doesn't handle mutation of length property correctly
Attachments
Patch (8.27 KB, patch)
2011-12-13 15:12 PST, Oliver Hunt
barraclough: review+
Oliver Hunt
Comment 1 2011-12-13 15:12:06 PST
Oliver Hunt
Comment 2 2011-12-13 15:18:06 PST
Note You need to log in before you can comment on or make changes to this bug.