Arguments object doesn't handle mutation of length property correctly https://bugs.webkit.org/show_bug.cgi?id=74454

Reviewed by Gavin Barraclough.

Source/JavaScriptCore:

Correct handling of arguments objects with overridden length property

* interpreter/Interpreter.cpp:
(JSC::loadVarargs):
* runtime/Arguments.cpp:
(JSC::Arguments::copyToArguments):
(JSC::Arguments::fillArgList):

LayoutTests:

Add tests of mutated arguments.length

* fast/js/arguments-expected.txt:
* fast/js/script-tests/arguments.js:
(argumentLengthIs5):
(duplicateArgumentAndReturnLast_call):
(duplicateArgumentAndReturnFirst_call):
(duplicateArgumentAndReturnLast_apply):
(duplicateArgumentAndReturnFirst_apply):

Canonical link: https://commits.webkit.org/91097@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102709 268f45cc-cd09-0410-ab3c-d52691b4dbfc